--- a/frontend/desktop-app/index.html
+++ b/frontend/desktop-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- TODO: Add favicon link tag when icon asset is available -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>desktop-app</title>
   </head>
